fix: list-panel on todolist editor was not visible due to release of dynamic shoplist categories fix: saving of to-do list wasn't possible (due to release of dynamic shoplist categories) change: restyled to-do list panel (same way as the shoplist panel)

--- a/a2note/static/a2note/main.css
+++ b/a2note/static/a2note/main.css
@@ -438,11 +438,11 @@ option {
   animation-iteration-count: 1;
 }
 
-.shoplist-panel {
+.list-panel {
   background-color: var(--input-background);
 }
 
-.shoplist-panel button:hover {
+.list-panel button:hover {
   transition: transform .6s;
   transform: scale(1.2);
 }
@@ -627,7 +627,8 @@ option {
 
 .singleItem {
   min-height: 3rem;
-  max-height: 5rem;
+  max-height: 6rem;
+  overflow-y: hidden;
 }
 
 .singleItem .card-header {
@@ -640,11 +641,13 @@ option {
   max-height: 3.2rem;
   margin: 0;
   padding: .2rem;
+  overflow-y: auto;
 }
 
 .itemQuantity {
   height: 1.5rem;
   width: 3.5rem;
+  margin: 0;
 }
 
 .section {
